[package]
name = "fits-preview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21"
egui_extras = "0.21"
egui_file = "0.8"
image = "0.24"
serde = { version = "1", features = ["derive"] }
toml = "0.7"

[[bin]]
name = "preview"
src = "src/bin/preview"
